add note adapter class and init recyclerview

--- a/app/src/main/res/layout/note_list_item.xml
+++ b/app/src/main/res/layout/note_list_item.xml
@@ -23,7 +23,7 @@
         tools:layout_editor_absoluteY="16dp"/>
 
     <TextView
-        android:id="@+id/textView"
+        android:id="@+id/tv_note"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_marginBottom="8dp"
