--- a/app/src/main/res/menu/menu_main.xml
+++ b/app/src/main/res/menu/menu_main.xml
@@ -7,4 +7,14 @@
         android:orderInCategory="100"
         android:title="@string/action_settings"
         app:showAsAction="never"/>
+    <item
+        android:id="@+id/action_add_sample_data"
+        android:orderInCategory="100"
+        android:title="@string/add_samples_data"
+        app:showAsAction="never"/>
+    <item
+        android:id="@+id/action_delete_all_data"
+        android:orderInCategory="100"
+        android:title="@string/delete_all"
+        app:showAsAction="never"/>
 </menu>
